--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -4,8 +4,8 @@
   </div>
 </header>
 
-<div class="container">
-  <table class="table">
+<div class="container" ng-controller="MainController">
+  <table class="table table-bordered" >
       <thead>
           <tr>
             <th>Course</th>
@@ -13,16 +13,35 @@
           </tr>
       </thead>
       <tbody>
-          <tr>
-              <td>Hello!</td>
-              <td>World!</td>
+          <tr ng-repeat="grade in tableMembers">
+            <td>{{grade.course}}</td>
+            <td>{{grade.grade_letter}}</td>
           </tr>
           <tr>
-              <td>Hello!</td>
-              <td>World!</td>
+              <th scope="row">CGPA</th>
+              <td>{{calculateCGPA()}}</td>
           </tr>
       </tbody>
   </table>
+
+    <h2>Add Course</h2>
+    <form class="form-horizontal" role="form" ng-submit="addRow()">
+        <div class="form-group">
+            <label class="control-label col-md-2">Code (i.e. COMP 1405)</label>
+            <div class="col-md-4">
+                <input type="text" class="form-control" name="course" ng-model="course"/>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label col-md-2">Grade (i.e. B+)</label>
+            <div class="col-md-4">
+                <input type="text" class="form-control" name="grade" ng-model="grade_letter"/>
+            </div>
+        </div>
+        <div class="form-group">
+            <input type="submit" value="Add!"/>
+        </div>
+    </form>
 </div>
 
 <footer></footer>
