--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -15,7 +15,7 @@
       <tbody>
           <tr ng-repeat="grade in tableMembers">
             <td>{{grade.course}}</td>
-            <td>{{grade.grade_letter}}</td>
+            <td>{{grade.gradeLetter}}</td>
           </tr>
           <tr>
               <th scope="row">CGPA</th>
@@ -35,7 +35,7 @@
         <div class="form-group">
             <label class="control-label col-md-2">Grade (i.e. B+)</label>
             <div class="col-md-4">
-                <input type="text" class="form-control" name="grade" ng-model="grade_letter"/>
+                <input type="text" class="form-control" name="grade" ng-model="gradeLetter"/>
             </div>
         </div>
         <div class="form-group">
