--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -31,7 +31,7 @@
             <label class="control-label col-md-2">Code (i.e. COMP 1405)</label>
             <div class="col-md-4">
                 <input type="text" class="form-control" name="course" ng-model="course" id="course" ng-pattern="/.{4} [0-9]{4}/"/>
-                <span ng-show="new_course.course.$error.pattern" class="course-error">That's not a valid grade!!</span>
+                <span ng-show="new_course.course.$error.pattern" class="course-error">That's not a valid course code!!</span>
             </div>
         </div>
         <div class="form-group">
