--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,6 +1,6 @@
 <header class="hero-unit" id="banner">
   <div class="container">
-    <h1>Grade calculator!</h1>
+    <h1>CGPA calculator!</h1>
   </div>
 </header>
 
